--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   }
 
   .head-text {
-    @apply sm:text-4xl text-3xl font-semibold text-gray;
+    @apply sm:text-4xl text-3xl font-semibold text-white-700;
   }
 
   .nav-ul {
